Shape Key Editor does not switch to assigned Key Action #31330

Closed
opened 2012-05-06 11:14:16 +02:00 by Tobias Oelgarte · 6 comments

%%%I appended an example file. If you select the left cube then the Shape Key Editor should switch to "KeyAction". But it still displays "KeyAction.002". Like with any other action editor it should switch to the action assigned to the object. Otherwise it is very confusing for the user.%%%

%%%I appended an example file. If you select the left cube then the Shape Key Editor should switch to "KeyAction". But it still displays "KeyAction.002". Like with any other action editor it should switch to the action assigned to the object. Otherwise it is very confusing for the user.%%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Not sure yet why this happens yet. Will take a closer look.%%%

%%%Not sure yet why this happens yet. Will take a closer look.%%%
Member

%%%Ah, found it!

Fixed in svn.%%%

%%%Ah, found it! Fixed in svn.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Question: Was this comment inside the if-condition intended?
http://lists.blender.org/pipermail/bf-blender-cvs/2012-May/045528.html%%%

%%%Question: Was this comment inside the if-condition intended? http://lists.blender.org/pipermail/bf-blender-cvs/2012-May/045528.html%%%
Member

%%%That was for the ancient pinning thing that I haven't brought back. I should probably remove it once and for all one day, since it's not likely that it will ever return%%%

%%%That was for the ancient pinning thing that I haven't brought back. I should probably remove it once and for all one day, since it's not likely that it will ever return%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31330
No description provided.