Bugfix [#31330] Shape Key Editor does not switch to assigned Key Action